--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
+    "react-jigsaw-puzzle": "^1.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "redux-persist": "^6.0.0"
