--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.7.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "firebase": "^11.6.1",
     "i18next": "^25.0.2",
     "prop-types": "^15.8.1",
@@ -21,7 +23,9 @@
     "react-jigsaw-puzzle": "^1.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
