--- a/.env
+++ b/.env
@@ -9,5 +9,71 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=191549185043
 VITE_FIREBASE_APP_ID=1:191549185043:ios:47f6b4f1c89b4ced4033e6
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyCWzYMt65A_oxtvkIsjO1UoTeFWgLkC2FY
 
+# Configuración de Google Maps
+# VITE_GOOGLE_MAPS_DETAIL_LEVEL: Controla el nivel de detalle del mapa (qué tipos de lugares se muestran)
+# Valores: 'minimal' (solo calles), 'basic' (calles + puntos importantes), 'detailed' (todos los detalles)
+VITE_GOOGLE_MAPS_DETAIL_LEVEL=basic
+
+# VITE_GOOGLE_MAPS_MIN_ZOOM: Nivel mínimo de zoom permitido en el mapa (1-21)
+# Valores menores = más alejado, valores mayores = más cerca
+VITE_GOOGLE_MAPS_MIN_ZOOM=15
+
+# VITE_GOOGLE_MAPS_MAX_ZOOM: Nivel máximo de zoom permitido en el mapa (1-21)
+# Valores menores = más alejado, valores mayores = más cerca
+VITE_GOOGLE_MAPS_MAX_ZOOM=19
+
+
 # Configuración del modo debug
 VITE_DEBUG_MODE=true
+
+# Configuración del comportamiento al acceder con evento cargado
+# VITE_EVENT_LOAD_BEHAVIOR: Determina qué pasa cuando se accede al programa y ya hay un evento cargado
+# Valores posibles:
+# - "reset_event": Desasocia el id de dispositivo del equipo en firebase y borra el almacenamiento local
+# - "keep_assignation": Crea copia de sesión en local, permite cargar datos de múltiples eventos
+# - "keep_event": Se carga el evento actual siempre desde el mapa
+# - "keep_page": Se carga el evento actual y en la página actual (comportamiento actual)
+VITE_EVENT_LOAD_BEHAVIOR=keep_event
+
+# Configuración de gadgets
+# VITE_GADGET_TIMEOUT: Tiempo en milisegundos que debe esperar un equipo para poder volver a enviar un gadget
+VITE_GADGET_TIMEOUT=30000
+
+# VITE_GADGET_SAME_TEAM: Determina si es posible enviar varias veces seguidas a un mismo equipo
+# Valores: true (permite), false (no permite)
+VITE_GADGET_SAME_TEAM=false
+
+# VITE_GADGET_PREVENT_ACTIVITY: Determina si los gadgets se pueden ejecutar cuando el equipo objetivo está haciendo una prueba
+# Valores: true (previene ejecución durante actividad), false (permite ejecución siempre)
+VITE_GADGET_PREVENT_ACTIVITY=true
+
+# VITE_GADGET_SLEEP: Tiempo en segundos entre la ejecución de gadgets cuando hay varios en cola
+VITE_GADGET_SLEEP=30
+
+# VITE_GADGET_NOTIFICATION: Determina si se debe mostrar la notificación cuando se ejecuta un gadget recibido
+# Valores: true (muestra notificación), false (no muestra notificación)
+VITE_GADGET_NOTIFICATION=false
+
+# VITE_ACTIVITY_CLOSE_BUTTO: Mostrar botón de cerrar en actividades
+# true = Mostrar botón de cerrar para volver al mapa (por defecto)
+# false = No mostrar botón de cerrar, las actividades deben completarse
+VITE_ACTIVITY_CLOSE_BUTTON=false
+
+# VITE_ADMIN_VIEW_TEAMS_POSITION: Determina si los administradores pueden ver la posición de los equipos
+# Valores: true (pueden ver), false (no pueden ver)
+VITE_ADMIN_VIEW_TEAMS_POSITION=true
+
+# VITE_TEAMS_VIEW_OTHER_TEAMS: Determina si los equipos pueden ver las posiciones de otros equipos en el mapa
+# true = Los equipos pueden ver las posiciones de otros equipos en el mapa
+# false = Los equipos solo ven su propia posición
+VITE_TEAMS_VIEW_OTHER_TEAMS=true
+
+
+# Configuración para compartir equipos por WebRTC
+# true = Permite compartir la pantalla del equipo mediante WebRTC
+# false = Deshabilita la funcionalidad de compartir equipos
+VITE_SHARE_TEAM_ALLOW=true
+
+# Servidor de señalización para compartir equipos
+# URL del servidor WebRTC signaling para coordinar las conexiones
+VITE_SHARE_TEAM_SIGNALING_SERVER=ws://127.0.0.1:3088
