--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,21 @@ VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 # true = Activa el modo debug (navegación libre, sin GPS)
 # false = Modo normal de producción (con GPS)
 VITE_DEBUG_MODE=false
+
+# Configuración de visibilidad de equipos en el mapa
+# true = Los administradores pueden ver las posiciones de todos los equipos
+# false = Los administradores no ven las posiciones de otros equipos
+VITE_ADMIN_VIEW_TEAMS_POSITION=true
+
+# true = Los equipos pueden ver las posiciones de otros equipos en el mapa
+# false = Los equipos solo ven su propia posición
+VITE_TEAMS_VIEW_OTHER_TEAMS=false
+
+# Configuración para compartir equipos por WebRTC
+# true = Permite compartir la pantalla del equipo mediante WebRTC
+# false = Deshabilita la funcionalidad de compartir equipos
+VITE_SHARE_TEAM_ALLOW=false
+
+# Servidor de señalización para compartir equipos
+# URL del servidor WebRTC signaling para coordinar las conexiones
+VITE_SHARE_TEAM_SIGNALING_SERVER=ws://localhost:3088
