boton seguir, session de evento

--- a/.env
+++ b/.env
@@ -67,3 +67,8 @@ VITE_ADMIN_VIEW_TEAMS_POSITION=true
 # true = Los equipos pueden ver las posiciones de otros equipos en el mapa
 # false = Los equipos solo ven su propia posición
 VITE_TEAMS_VIEW_OTHER_TEAMS=true
+
+# Configuración de acceso directo por evento
+# true = Limpia la sesión local al acceder con parámetro event
+# false = Mantiene la sesión local existente
+VITE_EVENT_ACCESS_CLEAR_SESSION=true
