--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,8 @@ VITE_SHARE_TEAM_ALLOW=false
 # Servidor de señalización para compartir equipos
 # URL del servidor WebRTC signaling para coordinar las conexiones
 VITE_SHARE_TEAM_SIGNALING_SERVER=ws://localhost:3088
+
+# Configuración de acceso directo por evento
+# true = Limpia la sesión local al acceder con parámetro event
+# false = Mantiene la sesión local existente
+VITE_EVENT_ACCESS_CLEAR_SESSION=true
