--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "firebase": "^11.6.1",
     "i18next": "^25.0.2",
+    "kalmanjs": "^1.1.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
