--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,15 @@ VITE_SHARE_TEAM_SIGNALING_SERVER=ws://localhost:3088
 # true = Limpia la sesión local al acceder con parámetro event
 # false = Mantiene la sesión local existente
 VITE_EVENT_ACCESS_CLEAR_SESSION=true
+
+# Configuración de orientación forzada
+# true = Fuerza la orientación portrait en dispositivos móviles/tablet
+# false = Permite rotación libre del dispositivo
+VITE_FORCE_PORTRAIT_ORIENTATION=false
+
+# Tipo de dispositivos a los que aplicar el forzado de orientación
+# todos = Aplicar a todos los dispositivos
+# mobile = Aplicar solo a móviles
+# tablet = Aplicar solo a tablets
+# mobile,tablet = Aplicar a móviles y tablets
+VITE_FORCE_PORTRAIT_DEVICE_TYPES=mobile
