--- a/.env
+++ b/.env
@@ -72,3 +72,27 @@ VITE_TEAMS_VIEW_OTHER_TEAMS=true
 # true = Limpia la sesión local al acceder con parámetro event
 # false = Mantiene la sesión local existente
 VITE_EVENT_ACCESS_CLEAR_SESSION=true
+
+
+# Configuración de orientación forzada
+# true = Fuerza la orientación portrait en dispositivos móviles/tablet
+# false = Permite rotación libre del dispositivo
+VITE_FORCE_PORTRAIT_ORIENTATION=false
+
+# Tipo de dispositivos a los que aplicar el forzado de orientación
+# todos = Aplicar a todos los dispositivos
+# mobile = Aplicar solo a móviles
+# tablet = Aplicar solo a tablets
+# mobile,tablet = Aplicar a móviles y tablets
+VITE_FORCE_PORTRAIT_DEVICE_TYPES=mobile
+
+# Configuración de activación automática de actividades por proximidad
+# VITE_ACTIVITY_PRECISION_REQUIRED: Precisión mínima requerida del GPS para activar actividades (en metros)
+VITE_ACTIVITY_PRECISION_REQUIRED=20
+
+# VITE_ACTIVITY_TIME_REQUIRED: Tiempo mínimo que debe estar dentro del radio para activar (en segundos)
+VITE_ACTIVITY_TIME_REQUIRED=5
+
+# VITE_ACTIVITY_RESET_DISTANCE_MULTIPLIER: Multiplicador de distancia para resetear activación automática
+# Si se aleja más de activity.distance * este multiplicador, se resetea la activación automática
+VITE_ACTIVITY_RESET_DISTANCE_MULTIPLIER=2
