fotos, URL por equipos

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ VITE_GOOGLE_MAPS_MIN_ZOOM=15
 
 # VITE_GOOGLE_MAPS_MAX_ZOOM: Nivel máximo de zoom permitido en el mapa (1-21)
 # Valores menores = más alejado, valores mayores = más cerca
-VITE_GOOGLE_MAPS_MAX_ZOOM=19
+VITE_GOOGLE_MAPS_MAX_ZOOM=21
 
 
 # Configuración del modo debug
@@ -33,7 +33,7 @@ VITE_DEBUG_MODE=true
 # - "keep_assignation": Crea copia de sesión en local, permite cargar datos de múltiples eventos
 # - "keep_event": Se carga el evento actual siempre desde el mapa
 # - "keep_page": Se carga el evento actual y en la página actual (comportamiento actual)
-VITE_EVENT_LOAD_BEHAVIOR=keep_event
+VITE_EVENT_LOAD_BEHAVIOR=keep_team
 
 # Configuración de gadgets
 # VITE_GADGET_TIMEOUT: Tiempo en milisegundos que debe esperar un equipo para poder volver a enviar un gadget
@@ -71,7 +71,12 @@ VITE_TEAMS_VIEW_OTHER_TEAMS=true
 # Configuración de acceso directo por evento
 # true = Limpia la sesión local al acceder con parámetro event
 # false = Mantiene la sesión local existente
-VITE_EVENT_ACCESS_CLEAR_SESSION=true
+VITE_EVENT_ACCESS_CLEAR_SESSION=false
+
+# Configuración de acceso obligatorio por tokens
+# true = Requiere tokens de evento y equipo válidos para acceder a la aplicación
+# false = Permite acceso normal sin tokens (comportamiento por defecto)
+VITE_REQUIRE_EVENT_TEAM_TOKENS=true
 
 
 # Configuración de orientación forzada
@@ -96,3 +101,9 @@ VITE_ACTIVITY_TIME_REQUIRED=5
 # VITE_ACTIVITY_RESET_DISTANCE_MULTIPLIER: Multiplicador de distancia para resetear activación automática
 # Si se aleja más de activity.distance * este multiplicador, se resetea la activación automática
 VITE_ACTIVITY_RESET_DISTANCE_MULTIPLIER=2
+
+# Configuración de información de equipo en el mapa
+# VITE_SHOW_TEAM_INFO_ON_CLICK: Mostrar información del equipo al hacer click en su marcador del mapa
+# true = Muestra popup con foto del equipo (si existe), puntos y estadísticas
+# false = No muestra información adicional al hacer click
+VITE_SHOW_TEAM_INFO_ON_CLICK=true
