--- a/.env
+++ b/.env
@@ -18,6 +18,11 @@ VITE_GOOGLE_MAPS_DETAIL_LEVEL=basic
 # Valores menores = más alejado, valores mayores = más cerca
 VITE_GOOGLE_MAPS_MIN_ZOOM=15
 
+# Notificaciones Push
+VITE_NOTIFICATIONS_SERVER_URL=http://localhost:3089
+VITE_VAPID_PUBLIC_KEY=BPVxFCOTQYMg0Qp5KhniLAEY1RcnYVEI4k-73wfpn8bGgjuDd0hO9fXh8TYGDFAuPisjJFJG5Pby5wVfybAg61s
+VITE_ENABLE_NOTIFICATIONS=true
+
 # VITE_GOOGLE_MAPS_MAX_ZOOM: Nivel máximo de zoom permitido en el mapa (1-21)
 # Valores menores = más alejado, valores mayores = más cerca
 VITE_GOOGLE_MAPS_MAX_ZOOM=21
