--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -14,6 +14,26 @@ services:
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - /srv/proxy-web/certs:/etc/nginx/certs:ro
+    depends_on:
+      - notification-server
+    networks:
+      - escultura-network
+    restart: unless-stopped
+
+  notification-server:
+    build:
+      context: ../notification-server
+      dockerfile: Dockerfile
+    ports:
+      - "3089:3089"
+    environment:
+      - NODE_ENV=production
+      - PORT=3089
+    env_file:
+      - ../notification-server/.env
+    volumes:
+      - ../notification-server/backup:/app/backup
+      - /srv/escultura/notification-server/backup:/app/backup
     networks:
       - escultura-network
     restart: unless-stopped
