--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 VITE_BASE_URL=http://localhost:5173
 VITE_API_BASE_URL=https://escultura.dev2bit.com/api
 
+# Versión de la aplicación
+VITE_APP_VERSION=1.0.0
+
 # Configuración de Firebase
 VITE_FIREBASE_API_KEY=your_firebase_api_key_here
 VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
@@ -24,6 +27,10 @@ VITE_DEBUG_MODE=false
 # false = Los administradores no ven las posiciones de otros equipos
 VITE_ADMIN_VIEW_TEAMS_POSITION=true
 
+# true = El administrador puede ver su propia posición y orientación en el mapa
+# false = Se mantiene el comportamiento actual sin mostrar la posición del administrador
+VITE_ADMIN_POSITION_VIEW=true
+
 # true = Los equipos pueden ver las posiciones de otros equipos en el mapa
 # false = Los equipos solo ven su propia posición
 VITE_TEAMS_VIEW_OTHER_TEAMS=false
@@ -42,6 +49,13 @@ VITE_SHARE_TEAM_SIGNALING_SERVER=ws://localhost:3088
 # false = Mantiene la sesión local existente
 VITE_EVENT_ACCESS_CLEAR_SESSION=true
 
+# Configuración de acceso simultáneo desde otro dispositivo para el mismo equipo
+# Valores posibles:
+# - "not": bloquea el acceso mostrando mensaje de dispositivo en uso
+# - "admin": bloquea y delega la aprobación a un administrador (mock por ahora)
+# - "take": el nuevo dispositivo toma el control generando un nuevo token
+VITE_SAME_TEAM=not
+
 # Configuración de orientación forzada
 # true = Fuerza la orientación portrait en dispositivos móviles/tablet
 # false = Permite rotación libre del dispositivo
@@ -53,3 +67,6 @@ VITE_FORCE_PORTRAIT_ORIENTATION=false
 # tablet = Aplicar solo a tablets
 # mobile,tablet = Aplicar a móviles y tablets
 VITE_FORCE_PORTRAIT_DEVICE_TYPES=mobile
+
+# Omitir popup de proximidad de actividades y comenzar automáticamente
+VITE_POPUP_ACTIVITY_SKIP=false
